gitops-observability/logs/opensearch.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: opensearch
  labels:
    pod-security.kubernetes.io/enforce: privileged

---

apiVersion: v1
kind: Service
metadata:
  name: fluentbit
  namespace: kube-system
spec:
  ports:
  - name: talos
    port: 12345
    protocol: TCP
    targetPort: talos
    nodePort: 30001
  selector:
    app.kubernetes.io/instance: kube-system-fluentbit
    app.kubernetes.io/name: fluent-bit
  type: NodePort

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opensearch
  namespace: opensearch
spec:
  hostnames:
  - dashboards.podzone.cloud
  parentRefs:
  - name: gateway
    namespace: kube-system
    kind: Gateway
  rules:
  - backendRefs:
    - name: opensearch-od-opensearch-dashboards
      port: 5601
    matches:
    - path:
        type: PathPrefix
        value: /
